@@ -1,14 +1,17 @@
-package com.hrm.gui.admin;
+﻿package com.hrm.gui.admin;
 
 import com.hrm.bus.ChucVuBUS;
 import com.hrm.bus.KetQua;
+import com.hrm.gui.components.PurpleButton;
 import com.hrm.model.ChucVu;
+import com.hrm.model.LichSuHeSoLuong;
 import com.hrm.util.DialogUtil;
 import com.hrm.util.HRMConstants;
 import com.hrm.util.PermissionCodes;
 import com.hrm.util.SessionContext;
-import com.hrm.util.UIHelper;
+import com.hrm.util.UIColors;
 import com.hrm.util.UIFonts;
+import com.hrm.util.UIHelper;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
@@ -16,32 +19,42 @@ import javax.swing.table.TableRowSorter;
 import java.awt.*;
 import java.text.Normalizer;
 import java.text.NumberFormat;
+import java.util.List;
 import java.util.Locale;
 
 public class PositionPanel extends JPanel {
 
-    private static final String STATUS_ALL = "Tat ca";
-    private static final String STATUS_ACTIVE = "Hoat dong";
+    private static final String STATUS_ALL      = "Tat ca";
+    private static final String STATUS_ACTIVE   = "Hoat dong";
     private static final String STATUS_INACTIVE = "Ngung hoat dong";
+
     private final ChucVuBUS service = new ChucVuBUS();
-    private final NumberFormat moneyFmt = NumberFormat.getNumberInstance(new Locale("vi", "VN"));
+    private final NumberFormat moneyFmt = NumberFormat.getNumberInstance(Locale.of("vi", "VN"));
+
     private JTable table;
     private DefaultTableModel tableModel;
     private TableRowSorter<DefaultTableModel> sorter;
     private JTextField txtSearch;
     private JComboBox<String> cboFilter;
-    private JButton btnThem;
+
+    private PurpleButton btnThem;
+    private PurpleButton btnSua;
+
     public PositionPanel() {
         setLayout(new BorderLayout());
         setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
+
+        // Top panel
         JPanel topPanel = new JPanel(new BorderLayout());
         JLabel title = new JLabel("QUAN LY CHUC VU");
         title.setFont(new Font("Arial", Font.BOLD, 16));
         title.setBorder(BorderFactory.createEmptyBorder(0, 0, 10, 0));
         topPanel.add(title, BorderLayout.NORTH);
+
         JLabel lblHint = new JLabel("Tim theo: Ma / Ten chuc vu / Trang thai");
         lblHint.setFont(new Font("Arial", Font.ITALIC, 11));
         topPanel.add(lblHint, BorderLayout.SOUTH);
+
         JPanel searchFilterPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
         JLabel lblSearch = new JLabel("Tim kiem:");
         txtSearch = new JTextField(20);
@@ -54,12 +67,12 @@ public class PositionPanel extends JPanel {
         searchFilterPanel.add(cboFilter);
         topPanel.add(searchFilterPanel, BorderLayout.CENTER);
         add(topPanel, BorderLayout.NORTH);
+
+        // Table - 5 cols: Ma, Ten, Cap bac, Phu cap, Trang thai
         tableModel = new DefaultTableModel(
                 new Object[]{"Ma CV", "Ten chuc vu", "Cap bac", "Phu cap (VND)", "Trang thai"}, 0) {
             @Override
-            public boolean isCellEditable(int row, int col) {
-                return false;
-            }
+            public boolean isCellEditable(int row, int col) { return false; }
         };
         table = new JTable(tableModel);
         table.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
@@ -72,53 +85,74 @@ public class PositionPanel extends JPanel {
         sorter = new TableRowSorter<>(tableModel);
         table.setRowSorter(sorter);
         add(new JScrollPane(table), BorderLayout.CENTER);
-        btnThem = UIHelper.createPrimaryButton("+ Them");
+
+        // Buttons
+        btnThem = new PurpleButton("+ Them");
+        btnSua  = new PurpleButton("Sua", UIColors.SUCCESS_GREEN, UIColors.SUCCESS_GREEN.darker(), UIColors.SUCCESS_GREEN.darker());
+        PurpleButton btnLichSu = new PurpleButton("Xem lich su he so");
+        btnSua.setEnabled(false);
+        btnLichSu.addActionListener(e -> showHistoryDialog());
+
         JPanel btnPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
         btnPanel.add(btnThem);
-        JButton btnLamMoi = new JButton("Lam moi");
+        btnPanel.add(btnSua);
+        btnPanel.add(btnLichSu);
+        JButton btnLamMoi = UIHelper.createDefaultButton("Lam moi");
         btnLamMoi.addActionListener(e -> refreshTable());
         btnPanel.add(btnLamMoi);
         add(btnPanel, BorderLayout.SOUTH);
+
         setupPermissions();
+
         btnThem.addActionListener(e -> showAddDialog());
+        btnSua.addActionListener(e -> showEditDialog());
+
         txtSearch.addKeyListener(new java.awt.event.KeyAdapter() {
             @Override
-            public void keyReleased(java.awt.event.KeyEvent e) {
-                applyFilter();
+            public void keyReleased(java.awt.event.KeyEvent e) { applyFilter(); }
+        });
+
+        table.getSelectionModel().addListSelectionListener(e -> {
+            if (!e.getValueIsAdjusting()) {
+                btnSua.setEnabled(table.getSelectedRow() != -1 &&
+                        SessionContext.getInstance().hasPermission(PermissionCodes.POSITION_MANAGE));
             }
         });
-        cboFilter.addActionListener(e -> applyFilter());
+
         table.addMouseListener(new java.awt.event.MouseAdapter() {
             @Override
             public void mouseClicked(java.awt.event.MouseEvent e) {
-                if (e.getClickCount() == 2) {
-                    showDetailDialog();
-                }
+                if (e.getClickCount() == 2) showDetailDialog();
             }
         });
+
         refreshTable();
+        cboFilter.addActionListener(e -> applyFilter());
     }
 
     private void setupPermissions() {
-        btnThem.setVisible(SessionContext.getInstance().hasPermission(PermissionCodes.POSITION_MANAGE));
+        boolean canManage = SessionContext.getInstance().hasPermission(PermissionCodes.POSITION_MANAGE);
+        btnThem.setVisible(canManage);
+        btnSua.setVisible(canManage);
     }
 
+    private boolean isRefreshing = false;
+
     private void applyFilter() {
+        if (isRefreshing) return;
         String searchText = txtSearch.getText().toLowerCase().trim();
         int statusFilterIndex = cboFilter.getSelectedIndex();
         RowFilter<DefaultTableModel, Object> rf = new RowFilter<DefaultTableModel, Object>() {
             @Override
             public boolean include(Entry<? extends DefaultTableModel, ? extends Object> entry) {
-                String ma = entry.getStringValue(0).toLowerCase();
-                String tenChucVu = entry.getStringValue(1).toLowerCase();
-                boolean matchSearch = searchText.isEmpty() || ma.contains(searchText) || tenChucVu.contains(searchText);
+                String ma  = entry.getStringValue(0).toLowerCase();
+                String ten = entry.getStringValue(1).toLowerCase();
+                boolean matchSearch = searchText.isEmpty() || ma.contains(searchText) || ten.contains(searchText);
+                // trangThai is at col 4
                 String trangThai = normalizeTrangThai(entry.getStringValue(4));
                 boolean matchStatus = true;
-                if (statusFilterIndex == 1) {
-                    matchStatus = "hoatdong".equals(trangThai);
-                } else if (statusFilterIndex == 2) {
-                    matchStatus = "ngunghoatdong".equals(trangThai) || "ngung".equals(trangThai);
-                }
+                if (statusFilterIndex == 1) matchStatus = "hoatdong".equals(trangThai);
+                else if (statusFilterIndex == 2) matchStatus = "ngunghoatdong".equals(trangThai) || "ngung".equals(trangThai);
                 return matchSearch && matchStatus;
             }
         };
@@ -126,6 +160,7 @@ public class PositionPanel extends JPanel {
     }
 
     private void refreshTable() {
+        isRefreshing = true;
         tableModel.setRowCount(0);
         for (ChucVu p : service.getAllPositions()) {
             tableModel.addRow(new Object[]{
@@ -138,15 +173,17 @@ public class PositionPanel extends JPanel {
         }
         txtSearch.setText("");
         cboFilter.setSelectedIndex(0);
+        sorter.setRowFilter(null);
+        isRefreshing = false;
     }
 
     private void showAddDialog() {
-        JTextField txtMa = new JTextField();
-        JTextField txtTen = new JTextField();
+        JTextField txtMa     = new JTextField();
+        JTextField txtTen    = new JTextField();
         JTextField txtCapBac = new JTextField("1");
         JTextField txtPhuCap = new JTextField("0");
-        JTextArea txtMoTa = new JTextArea(3, 20);
-        txtMoTa.setLineWrap(true);
+        JTextArea  txtMoTa   = new JTextArea(3, 20); txtMoTa.setLineWrap(true);
+
         Object[] fields = {
                 "Ma chuc vu (*):", txtMa,
                 "Ten chuc vu (*):", txtTen,
@@ -155,155 +192,113 @@ public class PositionPanel extends JPanel {
                 "Mo ta:", new JScrollPane(txtMoTa)
         };
         int ok = JOptionPane.showConfirmDialog(this, fields, "Them chuc vu moi", JOptionPane.OK_CANCEL_OPTION);
-        if (ok != JOptionPane.OK_OPTION) {
+        if (ok != JOptionPane.OK_OPTION) return;
+
+        int capBac;
+        double phuCap;
+        try {
+            capBac = Integer.parseInt(txtCapBac.getText().trim());
+            phuCap = Double.parseDouble(txtPhuCap.getText().trim());
+        } catch (NumberFormatException ex) {
+            DialogUtil.showError(this, "Cap bac va phu cap phai la so hop le.");
             return;
         }
-        String maChucVu = txtMa.getText().trim();
-        if (maChucVu.isEmpty()) {
-            JOptionPane.showMessageDialog(this, "Ma chuc vu khong duoc de trong.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-            return;
-        }
-        if (service.existsActiveByCode(maChucVu)) {
-            JOptionPane.showMessageDialog(this,
-                    "Ma chuc vu '" + maChucVu + "' da ton tai va dang hoat dong. Vui long dung ma khac.",
-                    "Trung ma chuc vu", JOptionPane.ERROR_MESSAGE);
-            return;
-        }
-        String tenChucVu = txtTen.getText().trim();
-        if (tenChucVu.isEmpty()) {
-            JOptionPane.showMessageDialog(this, "Ten chuc vu khong duoc de trong.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-            return;
-        }
-        Integer capBac = parseCapBac(txtCapBac.getText(), this);
-        if (capBac == null) {
-            return;
-        }
-        Double phuCap = parsePhuCap(txtPhuCap.getText(), this);
-        if (phuCap == null) {
-            return;
-        }
+
         KetQua<Void> kq = service.addPosition(
-                maChucVu,
-                tenChucVu,
-                capBac,
-                phuCap,
-                txtMoTa.getText().trim()
-        );
-        if (!kq.isSuccess()) {
-            DialogUtil.showError(this, kq.getMessage());
-            return;
-        }
+                txtMa.getText().trim(), txtTen.getText().trim(), capBac, phuCap, txtMoTa.getText().trim());
+        if (!kq.isSuccess()) { DialogUtil.showError(this, kq.getMessage()); return; }
         refreshTable();
         DialogUtil.showSuccess(this, kq.getMessage());
     }
 
-    private void showDetailDialog() {
+    private void showEditDialog() {
         int row = table.getSelectedRow();
-        if (row == -1) {
-            return;
-        }
+        if (row < 0) { DialogUtil.showWarn(this, "Vui long chon mot chuc vu de sua."); return; }
         int modelRow = table.convertRowIndexToModel(row);
         String ma = (String) tableModel.getValueAt(modelRow, 0);
         ChucVu pos = service.getByMaChucVu(ma);
-        if (pos == null) {
-            return;
-        }
+        if (pos == null) return;
+
         boolean canEdit = SessionContext.getInstance().hasPermission(PermissionCodes.POSITION_MANAGE);
         Frame frame = (Frame) SwingUtilities.getWindowAncestor(this);
-        JDialog dialog = new JDialog(frame, "Chi tiet chuc vu - " + pos.getTenChucVu(), true);
-        JTextField txtMa = new JTextField(pos.getId());
-        txtMa.setEnabled(false);
-        JTextField txtTen = new JTextField(pos.getTenChucVu());
+        JDialog dialog = new JDialog(frame, "Sua chuc vu - " + pos.getTenChucVu(), true);
+
+        JTextField txtMa     = new JTextField(pos.getId()); txtMa.setEnabled(false);
+        JTextField txtTen    = new JTextField(pos.getTenChucVu());
         JTextField txtCapBac = new JTextField(String.valueOf(pos.getCapBac()));
         JTextField txtPhuCap = new JTextField(String.valueOf(pos.getPhuCapChucVu()));
-        JTextArea txtMoTa = new JTextArea(pos.getMoTa() != null ? pos.getMoTa() : "", 3, 20);
+        JTextArea  txtMoTa   = new JTextArea(pos.getMoTa() != null ? pos.getMoTa() : "", 3, 20);
         txtMoTa.setLineWrap(true);
         JComboBox<String> cboTrangThai = new JComboBox<>(new String[]{STATUS_ACTIVE, STATUS_INACTIVE});
         cboTrangThai.setSelectedItem(toTrangThaiDisplay(pos.getTrangThai()));
         cboTrangThai.setEnabled(canEdit);
+
         for (JComponent c : new JComponent[]{txtTen, txtCapBac, txtPhuCap, txtMoTa}) {
-            if (c instanceof JTextField) {
-                ((JTextField) c).setEditable(canEdit);
-            } else {
-                ((JTextArea) c).setEditable(canEdit);
-            }
+            if (c instanceof JTextField) ((JTextField) c).setEditable(canEdit);
+            else ((JTextArea) c).setEditable(canEdit);
         }
+
         JPanel form = new JPanel(new GridBagLayout());
         form.setBorder(BorderFactory.createEmptyBorder(16, 16, 8, 16));
         GridBagConstraints gbc = new GridBagConstraints();
         gbc.insets = new Insets(5, 8, 5, 8);
         gbc.anchor = GridBagConstraints.WEST;
-        String[] labels = {
-                "Ma chuc vu:", "Ten chuc vu (*):", "Cap bac:", "Phu cap (VND):", "Mo ta:", "Trang thai:"
-        };
-        JComponent[] fields = {txtMa, txtTen, txtCapBac, txtPhuCap, new JScrollPane(txtMoTa), cboTrangThai};
+
+        String[] labels = {"Ma chuc vu:", "Ten chuc vu (*):", "Cap bac:", "Phu cap (VND):", "Mo ta:", "Trang thai:"};
+        JComponent[] flds = {txtMa, txtTen, txtCapBac, txtPhuCap, new JScrollPane(txtMoTa), cboTrangThai};
         for (int i = 0; i < labels.length; i++) {
-            gbc.gridx = 0;
-            gbc.gridy = i;
-            gbc.fill = GridBagConstraints.NONE;
-            gbc.weightx = 0;
-            JLabel lbl = new JLabel(labels[i]);
-            lbl.setFont(UIFonts.TEXT_NORMAL);
+            gbc.gridx = 0; gbc.gridy = i; gbc.fill = GridBagConstraints.NONE; gbc.weightx = 0;
+            JLabel lbl = new JLabel(labels[i]); lbl.setFont(UIFonts.TEXT_NORMAL);
             form.add(lbl, gbc);
-            gbc.gridx = 1;
-            gbc.fill = GridBagConstraints.HORIZONTAL;
-            gbc.weightx = 1.0;
-            fields[i].setPreferredSize(new Dimension(210, i == 4 ? 60 : 28));
-            form.add(fields[i], gbc);
+            gbc.gridx = 1; gbc.fill = GridBagConstraints.HORIZONTAL; gbc.weightx = 1.0;
+            flds[i].setPreferredSize(new Dimension(210, i == 4 ? 60 : 28));
+            form.add(flds[i], gbc);
         }
-        JPanel btnPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT, 8, 8));
+
+        JPanel btnPanel2 = new JPanel(new FlowLayout(FlowLayout.RIGHT, 8, 8));
+        JButton btnLichSuBtn = UIHelper.createDefaultButton("Xem lich su he so");
+        btnLichSuBtn.addActionListener(e -> showHistoryDialog());
+        btnPanel2.add(btnLichSuBtn);
         JButton btnHuy = UIHelper.createDefaultButton("Huy");
         btnHuy.addActionListener(e -> dialog.dispose());
-        btnPanel.add(btnHuy);
+        btnPanel2.add(btnHuy);
+
         if (canEdit) {
             JButton btnLuu = UIHelper.createSuccessButton("Luu");
             btnLuu.addActionListener(e -> {
-                String tenChucVu = txtTen.getText().trim();
-                if (tenChucVu.isEmpty()) {
-                    JOptionPane.showMessageDialog(dialog, "Ten chuc vu khong duoc de trong.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-                    return;
-                }
-                Integer capBac = parseCapBac(txtCapBac.getText(), dialog);
-                if (capBac == null) {
-                    return;
-                }
-                Double phuCap = parsePhuCap(txtPhuCap.getText(), dialog);
-                if (phuCap == null) {
+                int capBac;
+                double phuCap;
+                try {
+                    capBac = Integer.parseInt(txtCapBac.getText().trim());
+                    phuCap = Double.parseDouble(txtPhuCap.getText().trim());
+                } catch (NumberFormatException ex) {
+                    DialogUtil.showError(dialog, "Cap bac va phu cap phai la so hop le.");
                     return;
                 }
                 KetQua<Void> kqCapNhat = service.updatePosition(
-                        ma,
-                        tenChucVu,
-                        capBac,
-                        phuCap,
-                        txtMoTa.getText().trim()
-                );
-                if (!kqCapNhat.isSuccess()) {
-                    DialogUtil.showError(dialog, kqCapNhat.getMessage());
-                    return;
-                }
-                String rawTrangThaiMoi = toTrangThaiRaw((String) cboTrangThai.getSelectedItem());
-                if (!normalizeTrangThai(rawTrangThaiMoi).equals(normalizeTrangThai(pos.getTrangThai()))) {
-                    KetQua<Void> kqTrangThai;
-                    if (HRMConstants.TRANG_THAI_HOAT_DONG.equals(rawTrangThaiMoi)) {
-                        kqTrangThai = service.activatePosition(ma);
+                        ma, txtTen.getText().trim(), capBac, phuCap, txtMoTa.getText().trim());
+                if (!kqCapNhat.isSuccess()) { DialogUtil.showError(dialog, kqCapNhat.getMessage()); return; }
+
+                String rawMoi = toTrangThaiRaw((String) cboTrangThai.getSelectedItem());
+                if (!normalizeTrangThai(rawMoi).equals(normalizeTrangThai(pos.getTrangThai()))) {
+                    KetQua<Void> kqTT;
+                    if (HRMConstants.TRANG_THAI_HOAT_DONG.equals(rawMoi)) {
+                        kqTT = service.activatePosition(ma);
                     } else {
-                        kqTrangThai = service.deactivatePosition(ma);
+                        kqTT = service.deactivatePosition(ma);
                     }
-                    if (!kqTrangThai.isSuccess()) {
-                        DialogUtil.showError(dialog, kqTrangThai.getMessage());
-                        return;
-                    }
+                    if (!kqTT.isSuccess()) { DialogUtil.showError(dialog, kqTT.getMessage()); return; }
                 }
                 refreshTable();
                 dialog.dispose();
                 DialogUtil.showSuccess(PositionPanel.this, "Cap nhat chuc vu thanh cong!");
             });
-            btnPanel.add(btnLuu);
+            btnPanel2.add(btnLuu);
         }
+
         JPanel main = new JPanel(new BorderLayout());
         main.add(form, BorderLayout.CENTER);
-        main.add(btnPanel, BorderLayout.SOUTH);
+        main.add(btnPanel2, BorderLayout.SOUTH);
         dialog.setContentPane(main);
         dialog.pack();
         dialog.setMinimumSize(new Dimension(420, 320));
@@ -311,76 +306,89 @@ public class PositionPanel extends JPanel {
         dialog.setVisible(true);
     }
 
+    private void showHistoryDialog() {
+        int row = table.getSelectedRow();
+        if (row == -1) {
+            DialogUtil.showWarn(this, "Vui long chon mot chuc vu de xem lich su.");
+            return;
+        }
+        int modelRow = table.convertRowIndexToModel(row);
+        String ma  = (String) tableModel.getValueAt(modelRow, 0);
+        String ten = (String) tableModel.getValueAt(modelRow, 1);
+
+        List<LichSuHeSoLuong> danhSach = service.getHistoryByMaChucVu(ma);
+
+        DefaultTableModel histModel = new DefaultTableModel(
+                new Object[]{"Ngay thay doi", "Phu cap cu (VND)", "Phu cap moi (VND)"}, 0) {
+            @Override
+            public boolean isCellEditable(int r, int c) { return false; }
+        };
+        for (LichSuHeSoLuong h : danhSach) {
+            histModel.addRow(new Object[]{
+                    h.getNgayThayDoi(),
+                    moneyFmt.format(h.getPhuCapCu()),
+                    moneyFmt.format(h.getPhuCapMoi())
+            });
+        }
+
+        JTable histTable = new JTable(histModel);
+        histTable.setRowHeight(24);
+        JScrollPane scroll = new JScrollPane(histTable);
+        scroll.setPreferredSize(new Dimension(500, 200));
+
+        JDialog dialog = new JDialog((Frame) SwingUtilities.getWindowAncestor(this),
+                "Lich su thay doi phu cap -- " + ten + " (" + ma + ")", true);
+        dialog.setLayout(new BorderLayout());
+        if (danhSach.isEmpty()) {
+            dialog.add(new JLabel("  Chua co lich su thay doi nao.", SwingConstants.CENTER), BorderLayout.CENTER);
+        } else {
+            dialog.add(scroll, BorderLayout.CENTER);
+        }
+        JButton btnDong = UIHelper.createDefaultButton("Dong");
+        btnDong.addActionListener(e -> dialog.dispose());
+        JPanel footer = new JPanel(); footer.add(btnDong);
+        dialog.add(footer, BorderLayout.SOUTH);
+        dialog.pack();
+        dialog.setLocationRelativeTo(this);
+        dialog.setVisible(true);
+    }
+
+    private void showDetailDialog() {
+        int row = table.getSelectedRow();
+        if (row < 0) return;
+        String ma = (String) tableModel.getValueAt(table.convertRowIndexToModel(row), 0);
+        ChucVu pos = service.getByMaChucVu(ma);
+        if (pos == null) return;
+
+        JOptionPane.showMessageDialog(this,
+                "Ma:          " + pos.getId() + "\n"
+                + "Ten:         " + pos.getTenChucVu() + "\n"
+                + "Cap bac:     Cap " + pos.getCapBac() + "\n"
+                + "Phu cap:     " + moneyFmt.format(pos.getPhuCapChucVu()) + " VND\n"
+                + "Mo ta:       " + (pos.getMoTa() != null ? pos.getMoTa() : "") + "\n"
+                + "Trang thai:  " + toTrangThaiDisplay(pos.getTrangThai()),
+                "Chi tiet chuc vu", JOptionPane.INFORMATION_MESSAGE);
+    }
+
     private String toTrangThaiDisplay(String raw) {
-        String normalized = normalizeTrangThai(raw);
-        if ("hoatdong".equals(normalized)) {
-            return STATUS_ACTIVE;
-        }
-        if ("ngunghoatdong".equals(normalized) || "ngung".equals(normalized)) {
-            return STATUS_INACTIVE;
-        }
+        String n = normalizeTrangThai(raw);
+        if ("hoatdong".equals(n)) return STATUS_ACTIVE;
+        if ("ngunghoatdong".equals(n) || "ngung".equals(n)) return STATUS_INACTIVE;
         return raw == null ? "" : raw;
     }
 
     private String toTrangThaiRaw(String display) {
-        String normalized = normalizeTrangThai(display);
-        if ("hoatdong".equals(normalized)) {
-            return HRMConstants.TRANG_THAI_HOAT_DONG;
-        }
-        if ("ngunghoatdong".equals(normalized) || "ngung".equals(normalized)) {
-            return HRMConstants.TRANG_THAI_NGUNG_HOAT_DONG;
-        }
+        String n = normalizeTrangThai(display);
+        if ("hoatdong".equals(n)) return HRMConstants.TRANG_THAI_HOAT_DONG;
+        if ("ngunghoatdong".equals(n) || "ngung".equals(n)) return HRMConstants.TRANG_THAI_NGUNG_HOAT_DONG;
         return display == null ? "" : display;
     }
 
     private String normalizeTrangThai(String value) {
-        if (value == null) {
-            return "";
-        }
+        if (value == null) return "";
         String v = Normalizer.normalize(value, Normalizer.Form.NFD)
                 .replaceAll("\\p{M}+", "")
-                .replace('đ', 'd')
-                .replace('Đ', 'D')
-                .toLowerCase()
-                .trim();
+                .replace('d', 'd').toLowerCase().trim();
         return v.replace("_", "").replace(" ", "").replace("-", "");
-    }
-
-    private Integer parseCapBac(String rawValue, Component parent) {
-        String text = rawValue == null ? "" : rawValue.trim();
-        if (text.isEmpty()) {
-            JOptionPane.showMessageDialog(parent, "Cấp bậc không được để trống.", "Lỗi nhập liệu", JOptionPane.ERROR_MESSAGE);
-            return null;
-        }
-        try {
-            int capBac = Integer.parseInt(text);
-            if (capBac < 1 || capBac > 20) {
-                JOptionPane.showMessageDialog(parent, "Cấp bậc phải là số từ 1 đến 20.", "Lỗi nhập liệu", JOptionPane.ERROR_MESSAGE);
-                return null;
-            }
-            return capBac;
-        } catch (NumberFormatException e) {
-            JOptionPane.showMessageDialog(parent, "Cấp bậc phải là số nguyên hợp lệ.", "Lỗi nhập liệu", JOptionPane.ERROR_MESSAGE);
-            return null;
-        }
-    }
-
-    private Double parsePhuCap(String rawValue, Component parent) {
-        String text = rawValue == null ? "" : rawValue.trim();
-        if (text.isEmpty()) {
-            JOptionPane.showMessageDialog(parent, "Phu cap khong duoc de trong.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-            return null;
-        }
-        try {
-            double phuCap = Double.parseDouble(text);
-            if (phuCap < 0) {
-                JOptionPane.showMessageDialog(parent, "Phu cap phai la so >= 0.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-                return null;
-            }
-            return phuCap;
-        } catch (NumberFormatException e) {
-            JOptionPane.showMessageDialog(parent, "Phu cap phai la so hop le.", "Loi nhap lieu", JOptionPane.ERROR_MESSAGE);
-            return null;
-        }
     }
 }
